kubernetes/k3s-01/workloads/mosquitto/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: docker.io/library/eclipse-mosquitto:2.0.22@sha256:fd9982f5ed92a6c2a90805601d2275f8fbd7f2d47c4cb3836f7db0bdc7a91bec
          ports:
            - name: mqtt
              containerPort: 1883
          volumeMounts:
            - name: mosquitto
              mountPath: /mosquitto/config
              subPath: config/
            - name: mosquitto-config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
            - name: mosquitto
              mountPath: /mosquitto/data
              subPath: data/
            - name: mosquitto
              mountPath: /mosquitto/log
              subPath: log/
      volumes:
        - name: mosquitto
          persistentVolumeClaim:
            claimName: mosquitto
        - name: mosquitto-config
          configMap:
            name: mosquitto
