kubernetes/k3s-01/workloads/mosquitto/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  entryPoints:
    - mqtt
  routes:
    - match: HostSNI(`*`)
      middlewares:
        - namespace: mosquitto
          name: mosquitto-ipallowlist
      services:
        - name: mosquitto
          port: 1883
  tls:
    secretName: mosquitto-certificate
