kubernetes/k3s-01/workloads/mosquitto/network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: mosquitto
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            app.kubernetes.io: traefik
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: owntracks
        podSelector:
          matchLabels:
            app: owntracks-recorder
      ports:
        - protocol: TCP
          port: 1883
